<resources>
    <string name="app_name">AgendaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agenda Mobile</string>
    <string name="nav_header_subtitle">masterdevels@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este e-mail é inválido</string>
    <string name="error_invalid_password">Senha incompatível. A senha está muito curta</string>
    <string name="error_incorrect_password">Senha Incorreta</string>
    <string name="error_field_required">Falha na requisição</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="nome_curto"> Nome muito curto </string>
    <string name="infome_nome"> Informe seu nome</string>
    <string name="informe_telefone"> Informe o telefone</string>
    <string name="telefone_invalido">Telefone inválido</string>
    <string name="senha_muito_curta">Senha muito curta</string>

    <string name="registrar">Criar uma Conta </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="senhas_nao_conferem">Senhas não conferem</string>
    <string name="informe_email">Informe o e-mail</string>
    <string name="email_ja_cadastrado">e-mail já cadastrado</string>
    <string name="falha_ao_conectar_servidor">Falha ao conectar com o servidor</string>
    <string name="situacao_indiposnivel">Indisponível</string>
    <string name="situacao_disponivel">Disponível</string>
    <string name="error_valid_horario_indisponivel">Horário Indisponível.</string>
    <string name="seu_agendamento">Seu agendamento</string>
    <string name="especialidade">Especialidade</string>
    <string name="_13_09_2018">13/09/2018</string>
    <string name="profissional">Profissional</string>
</resources>
